Update version and remove lambok